<resources>
    <string name="app_name">W03-Calculations</string>
    <string name="equals">equals</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="FirstNum">First Number</string>
    <string name="SecondNum">Second Number</string>
    <string name="add">Add</string>
    <string name="subt">Subtract</string>
    <string name="mult">Multiply</string>

</resources>