<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/number1"
        android:layout_width="169dp"
        android:layout_height="68dp"
        android:layout_marginBottom="1dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/FirstNum"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintStart_toStartOf="@+id/equals" />


    <TextView
        android:id="@+id/Op_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="6dp"
        android:singleLine="true"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintStart_toEndOf="@+id/number1" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="195dp"
        android:layout_height="69dp"
        android:layout_marginEnd="1dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/SecondNum"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toEndOf="@+id/equals" />

    <Button
        android:id="@+id/equals"
        android:layout_width="406dp"
        android:layout_height="111dp"
        android:layout_marginTop="96dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/equals"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/answer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="404dp"
        android:layout_height="58dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equals"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/OperatorChoice"
        android:layout_width="401dp"
        android:layout_height="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer">

        <RadioButton
            android:id="@+id/Radio_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add" />

        <RadioButton
            android:id="@+id/Radio_Subt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subt" />

        <RadioButton
            android:id="@+id/Radio_Mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mult" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>